Quick fix pricing toggle button and UGC header overlap

--- a/themes/inbeat/assets/scss/pages/_creatorstudio.scss
+++ b/themes/inbeat/assets/scss/pages/_creatorstudio.scss
@@ -1,5 +1,9 @@
 #creator-studio-hero{
     #hero{
+        @media only screen  and (min-width : 1824px) {
+            padding-top: calc(50vh - 15rem);
+        }
+        padding-top: calc(76vh - 15rem);
         padding-bottom: 0;
         margin: 0;
         a{
